CSS and HTML for every Page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="index.css">
@@ -21,7 +22,7 @@
     <div class="items">
         <a href="index.html" class="home item">Home</a>
         <a href="about.html" class="about item">About</a>
-        <a href="#" class="projects item">Projects</a>
+        <a href="projects.html" class="projects item">Projects</a>
         <a href="contact.html" class="contacts item">Contact</a>
     </div>
 
