--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="contact.css">
@@ -21,8 +21,8 @@
         <div class="items">
             <a href="index.html" class="home item">Home</a>
             <a href="about.html" class="about item">About</a>
-            <a href="#" class="projects item">Projects</a>
-            <a href="#" class="contacts item">Contact</a>
+            <a href="projects.html" class="projects item">Projects</a>
+            <a href="contact.html" class="contacts item">Contact</a>
         </div>
     
         <div class="links">
