--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <div class="items">
             <a href="index.html" class="home item">Home</a>
             <a href="about.html" class="about item">About</a>
-            <a href="projects.html" class="projects item">Projects</a>
+            <a href="projects.html" class="projects item">All Projects</a>
             <a href="contact.html" class="contacts item">Contact</a>
         </div>
     
