--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
         <div class="items">
             <a href="index.html" class="home item">Home</a>
             <a href="about.html" class="about item">About</a>
-            <a href="projects.html" class="projects item">Projects</a>
+            <a href="projects.html" class="projects item">All Projects</a>
             <a href="contact.html" class="contacts item">Contact</a>
         </div>
     
@@ -30,6 +30,15 @@
             <a href="https://htlsaalfelden.at"><i class="fa-solid fa-paperclip"></i></a>
         </div>
     </div>
-    
+    <div class="content">
+        <div class="parent">
+            <div class="div1"> </div>
+            <div class="div2"> </div>
+            <div class="div3"> </div>
+            <div class="div4"> </div>
+            <div class="div5"> </div>
+            <div class="div6"> </div>
+            </div>
+    </div>
 </body>
 </html>
