--- a/Sites/about.html
+++ b/Sites/about.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="../Styles/navbar.css">
+    <link rel="stylesheet" href="../Styles/about.css">
 </head>
 <body>
     <div class="navbar">
         <div class="header">
-            <img class="Logo" src="Logo.png">
+            <img class="Logo" src="/Images/Logo.png">
             <h2>Alessandro</h2> <!-- Fixed closing tag for h2 -->
             <h2>Davare</h2> <!-- Fixed closing tag for h2 -->
             <h4>5AHINF</h4>
         </div>
         <div class="items">
-            <a href="index.html" class="home item">Home</a>
+            <a href="../index.html" class="home item">Home</a>
             <a href="about.html" class="about item">About</a>
             <a href="projects.html" class="projects item">All Projects</a>
             <a href="contact.html" class="contacts item">Contact</a>
@@ -32,11 +32,12 @@
     </div>    
 
     <div class="contents">
-        
         <div class="parent">
-            <div class="div1"> 
-                <img src="AboutMe.png">
-                <img src="consent.png">
+            <div class="div1">
+                <div class="image">
+                    <p>Foto</p>
+                    <img class="Logo" src="/Images/Logo.png">
+                </div>
             </div>
             <div class="div2"> 
                 <h1>Hobbys</h1>
