--- a/Sites/contact.html
+++ b/Sites/contact.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="../Styles/navbar.css">
+    <link rel="stylesheet" href="../Styles/contact.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap">
     
 </head>
 <body>
     <div class="navbar">
         <div class="header">
-            <img class="Logo" src="Logo.png">
-            <h2>Alessandro</h2> <!-- Fixed closing tag for h2 -->
-            <h2>Davare</h2> <!-- Fixed closing tag for h2 -->
+            <img class="Logo" src="/Images/Logo.png">
+            <h2>Alessandro</h2>
+            <h2>Davare</h2>
             <h4>5AHINF</h4>
         </div>
         <div class="items">
-            <a href="index.html" class="home item">Home</a>
+            <a href="../index.html" class="home item">Home</a>
             <a href="about.html" class="about item">About</a>
             <a href="projects.html" class="projects item">All Projects</a>
             <a href="contact.html" class="contacts item">Contact</a>
