--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./Styles/navbar.css">
+    <link rel="stylesheet" href="./Styles/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap">
 
 </head>
@@ -16,16 +16,16 @@
 
     <div class="navbar">
         <div class="header">
-            <img class="Logo" src="Logo.png">
+            <img class="Logo" src="/Images/Logo.png">
             <h2>Alessandro</h1>
                 <h2>Davare</h1>
                     <h4>5AHINF</h3>
         </div>
         <div class="items">
             <a href="index.html" class="home item">Home</a>
-            <a href="about.html" class="about item">About</a>
-            <a href="projects.html" class="projects item">All Projects</a>
-            <a href="contact.html" class="contacts item">Contact</a>
+            <a href="./Sites/about.html" class="about item">About</a>
+            <a href="./Sites/projects.html" class="projects item">All Projects</a>
+            <a href="./Sites/contact.html" class="contacts item">Contact</a>
         </div>
 
         <div class="links">
@@ -45,7 +45,7 @@
             <h3 class="htmltext" style="margin-left: 50px; margin-top: -20px;">
                 < body >
             </h3>
-            <h3 class="htmltext" style="margin-left: 100px; margin-top: 100px; margin-bottom: 0px;">
+            <h3 class="htmltext" style="margin-left: 100px; margin-top: 20px; margin-bottom: 0px;">
                 < pre >
             </h3>
             <div class="text">
@@ -66,12 +66,12 @@
             <h3 class="htmltext" style="margin-left: 100px;">
                 < button >
             </h3>
-            <a href="about.html" class="button"><span>Say hi!</span></a>
-            <h3 class="htmltext" style="margin-left: 100px;">
+            <a href="./Sites/about.html" class="button"><span>Say hi!</span></a>
+            <h3 class="htmltext" style="margin-left: 100px; margin-bottom: 20px;">
                 < /button >
             </h3>
 
-            <h3 class="htmltext" style="margin-left: 50px; margin-top: 70px;">
+            <h3 class="htmltext" style="margin-left: 50px;">
                 < /body >
             </h3>
             <h3 class="htmltext" style="margin-top: -20px;">
@@ -81,21 +81,21 @@
 
         </div>
         <div class="div2">
-            <a href="Zahlenraten.html" class="project">
+            <a href="./Sites/Zahlenraten.html" class="project">
                 <h1>Zahlenraten</h1>
-                <img class="projectimg" src="Zahlenraten.png">
+                <img class="projectimg" src="/Images/Zahlenraten.png">
               </a>
-            <a href="project3.html" class="project">
-                <h1>Project 3</h1>
-                <img class="projectimg" src="https://media1.tenor.com/m/X07EYwJAQjwAAAAd/funni-meme.gif">
+            <a href="https://github.com/DavareDavare/MyGameList" class="project">
+                <h1>MyGameList</h1>
+                <img class="projectimg" src="/Images/MGL_Icon.png">
               </a>
-            <a href="project3.html" class="project">
-              <h1>Project 3</h1>
-              <img class="projectimg" src="https://media1.tenor.com/m/X07EYwJAQjwAAAAd/funni-meme.gif">
+            <a href="https://github.com/DavareDavare/T1_TableCast" class="project">
+              <h1>TableCast</h1>
+              <img class="projectimg" src="/Images/Drehteller.png">
             </a>
-            <a href="project4.html" class="project">
-              <h1>Project 4</h1>
-              <img class="projectimg" src="https://media1.tenor.com/m/X07EYwJAQjwAAAAd/funni-meme.gif">
+            <a href="https://github.com/DavareDavare/Spielesammlung" class="project">
+              <h1>Spielesammlung</h1>
+              <img class="projectimg" src="/Images/Dame_Color_Pick_GUI.png">
             </a>
           </div>
           
