--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </style>
 </head>
 <body>
-    <video id="video" autoplay loop>
+    <video id="video" autoplay muted loop>
         <source src="./6.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
