--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
     <script src="./666.js"></script>
     <script>
+        video.muted = false;
         const video = document.getElementById('video');
         const volumeSlider = document.getElementById('volumeSlider');
         const spinningElement = document.querySelector('.six');
