--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="top-left-text" id="topLeftText">
         <p>Succubus - Ken Carson</p>
     </div>
-
+    <script src="./666.js"></script>
     <script>
         const video = document.getElementById('video');
         const art = document.getElementById('art');
