--- a/why.html
+++ b/why.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Text FIFO</title>
+    <title>noone love you</title>
     <style>
         body {
             background: url('background.gif') no-repeat center center fixed;
