--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             topLeftText.style.pointerEvents = 'auto';
         }else
         {
-            window.location.href = "why.html";
+            window.location.href = "/why";
         }
         });
 
