--- a/alternate-ending/index.html
+++ b/alternate-ending/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scrollable Starry Night</title>
+    <title>alternate ending</title>
     <style>
         body {
             margin: 0;
