--- a/alternate-ending/index.html
+++ b/alternate-ending/index.html
@@ -71,6 +71,20 @@
                 createStar();
             }
         }
+        console.log("---------------*-----------------------------------------------")
+        console.log("--------------#*----------------------------*=-----------------")
+        console.log("-------------*#*----------------------------*#*----------------")
+        console.log("------------=##=----------=+**+=------------=##*---------------")
+        console.log("------------=##+-------+##########+---------=###---------------")
+        console.log("------------+###+-----*##############=------*###=--------------")
+        console.log("------------+#####*=-*################*----#####---------------")
+        console.log("------------=###########################*######*---------------")
+        console.log("-------------=#################################=---------------")
+        console.log("---------------+#############################*-----------------")
+        console.log("-----------------*#########################=-------------------")
+        console.log("----------------+##########################--------------------")
+        console.log("----------------*##########################--------------------")
+        console.log("----------------*##########################--------------------")
     </script>
 
     <!-- Added text on the left side of the image -->
