--- a/alternate-ending/index.html
+++ b/alternate-ending/index.html
@@ -98,6 +98,6 @@
         <p>music src: SNOW WORLD (EXTENDED) - KIKIYAMAS</p>
     </div>
 
-    <img src="aiko.png" height="1402px" width="1000px" alt="Aiko" class="bottom-image">
+    <img src="aiko.png" height="800px" width="570px" alt="Aiko" class="bottom-image" style="margin-bottom: -100px;">
 </body>
 </html>
