--- a/mind/index.html
+++ b/mind/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>disturbed mind</title>
+    <title>LEAVE ME ALONE</title>
     <style>
         body {
             background: url('eyes.gif') no-repeat center center fixed;
