--- a/alternate-ending/index.html
+++ b/alternate-ending/index.html
@@ -89,7 +89,7 @@
 
     <!-- Added text on the left side of the image -->
     <div class="start-text">
-        <p>alternate ending.</p>
+        <p>alternate ending?</p>
     </div>
 
     <!-- Added text on the right side of the image -->
