--- a/mind/index.html
+++ b/mind/index.html
@@ -87,6 +87,7 @@
     <div class="container" id="grid"></div>
 
     <script>
+        console.log("unending pain")
 const asciiArt = [
     "---------------*-----------------------------------------------",
     "--------------#*----------------------------*=-----------------",
