--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <script>
         const videos = [
             { src: "./ilck.mp4", text: "if looks could kill - Destroy Lonely" },
-            { src: "./freestyle2.mp4", text: "freestyle 2 - Ken Carson" },
+            { src: "./fomdj.mp4", text: "FOMDJ - Playboi Carti" },
             { src: "./530.mp4", text: "530 - Kanye West, Ty Dolla $ign" },
             { src: "./succubus.mp4", text: "Succubus - Ken Carson" },
             { src: "./24songs.mp4", text: "24 songs - Playboi Carti" }
