--- a/why/index.html
+++ b/why/index.html
@@ -107,7 +107,7 @@
     <script>
         const grid = document.getElementById("grid");
         let cols, rows, content = [];
-        const specialWords = ["help", "why", "error", "when", "end", "lost", "ahahah", "666", "", "denial", "anger", "bargaining", "depression", "acceptance", "?"];
+        const specialWords = ["help", "why", "when", "end", "lost", "666", "?"];
         let currentWord = [];
         const audio = document.getElementById("audio");
         audio.volume = 0.2;
