--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ function makeDraggableWindow() {
   if (videoToUse) {
     content.innerHTML = `<iframe width="100%" height="100%" src="${videoToUse}" frameborder="0" allowfullscreen></iframe>`;
   } else {
-    content.textContent = "I'm a draggable window!";
+    content.textContent = "You have to change folder first -> see \"help cd\"";
   }
 
   win.appendChild(content);
