--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ function createPromptSpan() {
     clear: "Clears the terminal screen. Alias: 'cls'.",
     pwd: "Prints the current directory.",
     ls: "Lists available paths/folders.",
-    cd: "Changes directory. Usage: 'cd <path>'",
+    cd: "Changes directory to a existing playlist -> see \"ls\". Usage: 'cd <path>'",
     date: "Displays the current date and time.",
     echo: "Prints the given text. Usage: 'echo <text>'",
     whoami: "Displays the current username.",
